style: change text color and text-shadow for catch phrase and product range to issue of text being to bright and unreadable in some browsers e.g. Safari

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -26,7 +26,7 @@ video.background-video {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-    color: #ddd;
+    color: #000;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,10 +39,10 @@ video.background-video {
     margin-bottom: 10px;
     padding: 0 5px;
     font-size: 2.0rem;
-    text-shadow: 0 0 10px #ddd,
+    text-shadow: 0 0 5px #ddd,
+                 0 0 5px #0ff,
                  0 0 10px #0ff,
-                 0 0 20px #0ff,
-                 0 0 40px #0ff;
+                 0 0 20px #0ff;
 }
 
 /* Newsletter Prompt */
@@ -60,6 +60,7 @@ video.background-video {
   color: #00bfff;
   font-weight: bold;
   text-decoration: underline;
+  text-shadow: none;
 }
 
 .overlay .newsletter-link {
@@ -72,10 +73,11 @@ video.background-video {
 .product-range {
     font-size: 1.2rem;
     margin-top: 20px;
-    text-shadow: 0 0 10px #ddd,
+    color: #000;
+    text-shadow: 0 0 5px #ddd,
+                 0 0 5px #0ff,
                  0 0 10px #0ff,
-                 0 0 20px #0ff,
-                 0 0 40px #0ff;
+                 0 0 20px #0ff;
 }
 
 /* Lower Content Section */
